<resources>
    <string name="app_name">TrakTrend</string>
    <string name="app_splash_description">Copyright © %d Template - All Rights Reserved.</string>


    <string name="nav_header_customization">Customization</string>
    <string name="nav_header_navigation">Navigation</string>
    <string name="nav_theme">Theme</string>

    <string name="nav_header_support">Support</string>
    <string name="nav_contact">Contact</string>
    <string name="nav_about">About</string>

    <string name="nav_home">Home</string>
    <string name="nav_history">History</string>

    <string name="Ok">OK</string>
    <string name="Close">Close</string>
    <string name="Cancel">Cancel</string>
    <string name="Search">Search</string>
    <string name="Reset">Reset</string>

    <string name="action_search">Search</string>
    <string name="action_sort">Sort</string>

    <string name="action_mode_selected">Selected Items: %d</string>

    <string name="navigation_drawer_open">Navigation drawer opened</string>
    <string name="navigation_drawer_close">Navigation drawer closed</string>

    <string name="empty_response">No data to display</string>
    <string name="action_retry">Reload</string>

    <string name="text_no_permission">%s not granted!</string>
    <string name="text_authentication_required">Login required</string>


    <string name="app_banner_text">Template - All Rights Reserved.</string>
    <string name="text_permission_granted">Success, please repeat action</string>
    <string name="text_permission_denied">Permission was not granted</string>
    <string name="logged_in_as">Logged in as</string>

    <string name="warning_empty_input">Empty input fields are not allowed</string>
    <string name="warning_response">Error with network request</string>
    <string name="confirm_close">Press back again to exit</string>

    <!-- Settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_header_notifications_summary">Configure how notifications are handled</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_key_new_message_notifications">notifications_new_message</string>

    <string name="pref_title_ringtone">Notification Ringtone</string>
    <string name="pref_key_ringtone" translatable="false">notifications_new_message_ringtone</string>

    <string name="pref_ringtone_silent">Silent</string>


    <!-- Settings for Data & Sync &amp; is the html equivalent of &-->
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_header_data_sync_summary">Configure the notification check frequency</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string name="pref_key_sync_frequency" translatable="false">sync_frequency</string>

    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="comment_hint">Enter your comment</string>
    <string name="please_wait">Busy, please wait</string>
    <string name="error_null">Sorry, something went wrong.</string>
    <string name="Loading">Loading</string>
    <string name="text_unable_to_load_next_page">Error loading more results!</string>

    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
    </string-array>

    <!--These are the actual value of the titles above, obviously no translation required here-->
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
    </string-array>

</resources>
