<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:title="@string/nav_header_navigation">
        <menu>
            <group android:id="@+id/nav_group_navigation"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_home"
                    android:icon="@drawable/ic_home_grey_600_24dp"
                    android:title="@string/nav_home"
                    app:showAsAction="ifRoom|withText"/>

                <item
                    android:id="@+id/nav_history"
                    android:icon="@drawable/ic_access_time_grey_600_24dp"
                    android:title="@string/nav_history"
                    app:showAsAction="ifRoom|withText"/>
            </group>
        </menu>
    </item>

    <item android:title="@string/nav_header_customization">
        <menu>
            <group android:id="@+id/nav_group_customization">
                <item
                    android:id="@+id/nav_theme"
                    android:icon="@drawable/ic_invert_colors_grey_600_24dp"
                    android:title="@string/nav_theme" />
            </group>
        </menu>
    </item>

    <item android:title="@string/nav_header_support">
        <menu>
            <group android:id="@+id/nav_group_support">
                <item
                    android:id="@+id/nav_about"
                    android:icon="@drawable/ic_help_grey_600_24dp"
                    android:title="@string/nav_about" />
                <item
                    android:id="@+id/nav_contact"
                    android:icon="@drawable/ic_email_grey_600_24dp"
                    android:title="@string/nav_contact" />
            </group>
        </menu>
    </item>

</menu>
